--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Achieve email file, parse, index and store in mongodb
+Achieve email file, parse, index and store in mongodb.
+Welcome someone to join me work together.
